# NexaPlatform

./: .env.example  .eslintrc.cjs  .gitignore  README.md  package.json  pnpm-lock.yaml  progress.md  tsconfig.base.json
apps/api/: .env.example  alembic.ini  alembic_test.db  alembic_test_activities.db  alembic_test_contacts.db  alembic_test_leads.db  alembic_test_opportunities.db  pyproject.toml
apps/api/alembic/: env.py
apps/api/app/: audit.py  context.py  events.py  files_stub.py  logging.py  main.py  metrics.py  otel.py
apps/api/app/api/: routes.py
apps/api/tests/: test_accounts_api.py  test_activities_notes_attachments_api.py  test_audit_read_api.py  test_authz_admin_api.py  test_authz_policy_backend.py  test_billing_api.py  test_billing_service.py  test_catalog_api.py  test_catalog_service.py  test_contacts_api.py  test_correlation_id.py  test_crm_search_api.py  test_custom_fields_api.py  test_finance_reports_api.py  test_finance_reports_service.py  test_fls_security.py  test_import_export_api.py  test_leads_api.py  test_ledger_api.py  test_ledger_service.py  test_logging_context.py  test_metrics_endpoint.py  test_opportunities_api.py  test_otel_spans.py  test_payments_api.py  test_payments_service.py  test_pipelines_read_api.py  test_rate_limit.py  test_revenue_api.py  test_revenue_handoff_jobs.py  test_revenue_integration_api.py  test_revenue_service.py  test_rls_contact_repository_integration.py  test_rls_security.py  test_subscription_api.py  test_subscription_service.py  test_workflow_guardrails.py  test_workflows_api.py  test_workflows_auto_execute.py
(+283 files in other folders)
